log
Sat May 17 19:36:04 -04 2025: 
Compilation failed
test.c:156:16: error: passing arguments to 'get_size' without a prototype is deprecated in all versions of C and is not supported in C2x [-Werror,-Wdeprecated-non-prototype]
    if(get_size(adj) != 3){
               ^
test.c:157:86: error: passing arguments to 'get_size' without a prototype is deprecated in all versions of C and is not supported in C2x [-Werror,-Wdeprecated-non-prototype]
        sprintf(msg,"la lista deberia tener tamanno 3 pero tiene tamanno %d",get_size(adj));
                                                                                     ^
2 errors generated.
In file included from list.c:4:
./list.h:26:5: error: a function declaration without a prototype is deprecated in all versions of C and is treated as a zero-parameter prototype in C2x, conflicting with a subsequent definition [-Werror,-Wdeprecated-non-prototype]
int get_size();
    ^
list.c:19:5: note: conflicting prototype is here
int get_size(List* list){
    ^
1 error generated.
3f0e54c
Sat May 17 19:40:39 -04 2025: 
Compilation failed
test.c:156:16: error: passing arguments to 'get_size' without a prototype is deprecated in all versions of C and is not supported in C2x [-Werror,-Wdeprecated-non-prototype]
    if(get_size(adj) != 3){
               ^
test.c:157:86: error: passing arguments to 'get_size' without a prototype is deprecated in all versions of C and is not supported in C2x [-Werror,-Wdeprecated-non-prototype]
        sprintf(msg,"la lista deberia tener tamanno 3 pero tiene tamanno %d",get_size(adj));
                                                                                     ^
2 errors generated.
In file included from list.c:4:
./list.h:26:5: error: a function declaration without a prototype is deprecated in all versions of C and is treated as a zero-parameter prototype in C2x, conflicting with a subsequent definition [-Werror,-Wdeprecated-non-prototype]
int get_size();
    ^
list.c:19:5: note: conflicting prototype is here
int get_size(List* list){
    ^
1 error generated.
f5ffb67
Sat May 17 19:43:04 -04 2025: 
Compilation failed
test.c:156:16: error: passing arguments to 'get_size' without a prototype is deprecated in all versions of C and is not supported in C2x [-Werror,-Wdeprecated-non-prototype]
    if(get_size(adj) != 3){
               ^
test.c:157:86: error: passing arguments to 'get_size' without a prototype is deprecated in all versions of C and is not supported in C2x [-Werror,-Wdeprecated-non-prototype]
        sprintf(msg,"la lista deberia tener tamanno 3 pero tiene tamanno %d",get_size(adj));
                                                                                     ^
2 errors generated.
In file included from list.c:4:
./list.h:26:5: error: a function declaration without a prototype is deprecated in all versions of C and is treated as a zero-parameter prototype in C2x, conflicting with a subsequent definition [-Werror,-Wdeprecated-non-prototype]
int get_size();
    ^
list.c:19:5: note: conflicting prototype is here
int get_size(List* list){
    ^
1 error generated.
9b17875
Sat May 17 19:49:49 -04 2025: 
Compilation failed
test.c:156:16: error: passing arguments to 'get_size' without a prototype is deprecated in all versions of C and is not supported in C2x [-Werror,-Wdeprecated-non-prototype]
    if(get_size(adj) != 3){
               ^
test.c:157:86: error: passing arguments to 'get_size' without a prototype is deprecated in all versions of C and is not supported in C2x [-Werror,-Wdeprecated-non-prototype]
        sprintf(msg,"la lista deberia tener tamanno 3 pero tiene tamanno %d",get_size(adj));
                                                                                     ^
2 errors generated.
In file included from list.c:4:
./list.h:26:5: error: a function declaration without a prototype is deprecated in all versions of C and is treated as a zero-parameter prototype in C2x, conflicting with a subsequent definition [-Werror,-Wdeprecated-non-prototype]
int get_size();
    ^
list.c:19:5: note: conflicting prototype is here
int get_size(List* list){
    ^
1 error generated.
2b6f6a3
Sat May 17 19:51:31 -04 2025: 
Compilation failed
test.c:156:16: error: passing arguments to 'get_size' without a prototype is deprecated in all versions of C and is not supported in C2x [-Werror,-Wdeprecated-non-prototype]
    if(get_size(adj) != 3){
               ^
test.c:157:86: error: passing arguments to 'get_size' without a prototype is deprecated in all versions of C and is not supported in C2x [-Werror,-Wdeprecated-non-prototype]
        sprintf(msg,"la lista deberia tener tamanno 3 pero tiene tamanno %d",get_size(adj));
                                                                                     ^
2 errors generated.
In file included from list.c:4:
./list.h:26:5: error: a function declaration without a prototype is deprecated in all versions of C and is treated as a zero-parameter prototype in C2x, conflicting with a subsequent definition [-Werror,-Wdeprecated-non-prototype]
int get_size();
    ^
list.c:19:5: note: conflicting prototype is here
int get_size(List* list){
    ^
1 error generated.
2b6f6a3
Sat May 17 19:56:30 -04 2025: 
 sudoku.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
Compilation failed
test.c:156:16: error: passing arguments to 'get_size' without a prototype is deprecated in all versions of C and is not supported in C2x [-Werror,-Wdeprecated-non-prototype]
    if(get_size(adj) != 3){
               ^
test.c:157:86: error: passing arguments to 'get_size' without a prototype is deprecated in all versions of C and is not supported in C2x [-Werror,-Wdeprecated-non-prototype]
        sprintf(msg,"la lista deberia tener tamanno 3 pero tiene tamanno %d",get_size(adj));
                                                                                     ^
2 errors generated.
In file included from list.c:4:
./list.h:26:5: error: a function declaration without a prototype is deprecated in all versions of C and is treated as a zero-parameter prototype in C2x, conflicting with a subsequent definition [-Werror,-Wdeprecated-non-prototype]
int get_size();
    ^
list.c:19:5: note: conflicting prototype is here
int get_size(List* list){
    ^
1 error generated.
d056ba9
Sat May 17 19:56:47 -04 2025: 
Compilation failed
test.c:156:16: error: passing arguments to 'get_size' without a prototype is deprecated in all versions of C and is not supported in C2x [-Werror,-Wdeprecated-non-prototype]
    if(get_size(adj) != 3){
               ^
test.c:157:86: error: passing arguments to 'get_size' without a prototype is deprecated in all versions of C and is not supported in C2x [-Werror,-Wdeprecated-non-prototype]
        sprintf(msg,"la lista deberia tener tamanno 3 pero tiene tamanno %d",get_size(adj));
                                                                                     ^
2 errors generated.
In file included from list.c:4:
./list.h:26:5: error: a function declaration without a prototype is deprecated in all versions of C and is treated as a zero-parameter prototype in C2x, conflicting with a subsequent definition [-Werror,-Wdeprecated-non-prototype]
int get_size();
    ^
list.c:19:5: note: conflicting prototype is here
int get_size(List* list){
    ^
1 error generated.
5b80918
Sat May 17 20:00:37 -04 2025: 
 tests:  0|5
total_score: 0/70
509068e
Sat May 17 20:05:06 -04 2025: 
 sudoku.c | 90 +++++++++++++++++++++++++++++++++++++++++++++++++++++-----------
 1 file changed, 75 insertions(+), 15 deletions(-)
 tests:  3|4
total_score: 20/70
42ba1af
Sat May 17 20:09:28 -04 2025: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  6|2
total_score: 45/70
f4e77cb
Sat May 17 21:51:09 -04 2025: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
678e71a
